Start exercise 1 - Chipo

--- a/01_Getting_&_Knowing_Your_Data/Chipotle/Exercises.ipynb
+++ b/01_Getting_&_Knowing_Your_Data/Chipotle/Exercises.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -38,6 +38,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark import SparkFiles\n",
+    "dataset_url, dataset_file = \"https://raw.githubusercontent.com/justmarkham/DAT8/master/data/chipotle.tsv\", \"chipotle.tsv\"\n",
+    "spark.sparkContext.addFile(dataset_url)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -46,12 +57,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "chipo = spark.read.csv(SparkFiles.get(dataset_file), sep='\\t', header=True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -62,13 +75,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+--------+--------------------+--------------------+----------+\n",
+      "|order_id|quantity|           item_name|  choice_description|item_price|\n",
+      "+--------+--------+--------------------+--------------------+----------+\n",
+      "|       1|       1|Chips and Fresh T...|                NULL|    $2.39 |\n",
+      "|       1|       1|                Izze|        [Clementine]|    $3.39 |\n",
+      "|       1|       1|    Nantucket Nectar|             [Apple]|    $3.39 |\n",
+      "|       1|       1|Chips and Tomatil...|                NULL|    $2.39 |\n",
+      "|       2|       2|        Chicken Bowl|[Tomatillo-Red Ch...|   $16.98 |\n",
+      "|       3|       1|        Chicken Bowl|[Fresh Tomato Sal...|   $10.98 |\n",
+      "|       3|       1|       Side of Chips|                NULL|    $1.69 |\n",
+      "|       4|       1|       Steak Burrito|[Tomatillo Red Ch...|   $11.75 |\n",
+      "|       4|       1|    Steak Soft Tacos|[Tomatillo Green ...|    $9.25 |\n",
+      "|       5|       1|       Steak Burrito|[Fresh Tomato Sal...|    $9.25 |\n",
+      "+--------+--------+--------------------+--------------------+----------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "chipo.show(10)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -79,26 +117,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4622"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Solution 1\n",
-    "\n"
+    "chipo.count()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+-----------------+------------------+-----------------+--------------------+----------+\n",
+      "|summary|         order_id|          quantity|        item_name|  choice_description|item_price|\n",
+      "+-------+-----------------+------------------+-----------------+--------------------+----------+\n",
+      "|  count|             4622|              4622|             4622|                4622|      4622|\n",
+      "|   mean|927.2548680225011|1.0757247944612722|             null|                null|      null|\n",
+      "| stddev|528.8907955866096|0.4101863342575333|             null|                null|      null|\n",
+      "|    min|                1|                 1|6 Pack Soft Drink|                NULL|    $1.09 |\n",
+      "|    max|              999|                 8|Veggie Soft Tacos|[[Tomatillo-Red C...|    $9.39 |\n",
+      "+-------+-----------------+------------------+-----------------+--------------------+----------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Solution 2\n",
-    "\n"
+    "chipo.describe().show()\n"
    ]
   },
   {
@@ -110,12 +176,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(chipo.columns)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -126,12 +205,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column 1: 'order_id'\n",
+      "Column 2: 'quantity'\n",
+      "Column 3: 'item_name'\n",
+      "Column 4: 'choice_description'\n",
+      "Column 5: 'item_price'\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col_idx, col_name in enumerate(chipo.columns):\n",
+    "    print(f\"Column {col_idx + 1}: '{col_name}'\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -142,12 +236,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Not applicable"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -159,9 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
