--- a/01_Getting_&_Knowing_Your_Data/Chipotle/Exercises.ipynb
+++ b/01_Getting_&_Knowing_Your_Data/Chipotle/Exercises.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8,6 +9,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -19,11 +21,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23/05/26 21:46:14 WARN Utils: Your hostname, taliandorogd resolves to a loopback address: 127.0.1.1; using 192.168.0.32 instead (on interface wlp5s0)\n",
+      "23/05/26 21:46:14 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23/05/26 21:46:14 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from pyspark.sql import SparkSession\n",
@@ -31,6 +57,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -39,16 +66,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark import SparkFiles\n",
-    "dataset_url, dataset_file = \"https://raw.githubusercontent.com/justmarkham/DAT8/master/data/chipotle.tsv\", \"chipotle.tsv\"\n",
-    "spark.sparkContext.addFile(dataset_url)"
+    "spark.sparkContext.addFile(\"https://raw.githubusercontent.com/justmarkham/DAT8/master/data/chipotle.tsv\")"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -57,16 +84,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
-    "chipo = spark.read.csv(SparkFiles.get(dataset_file), sep='\\t', header=True)"
+    "chipo = spark.read.csv(SparkFiles.get(\"chipotle.tsv\"), sep = '\\t', header = True)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -75,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -109,6 +145,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -117,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -128,7 +165,7 @@
        "4622"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,11 +177,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 5:>                                                          (0 + 1) / 1]\r"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -160,6 +204,13 @@
       "+-------+-----------------+------------------+-----------------+--------------------+----------+\n",
       "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
     }
    ],
    "source": [
@@ -168,6 +219,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -176,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -187,7 +239,7 @@
        "5"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,6 +249,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -205,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -214,20 +267,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Column 1: 'order_id'\n",
-      "Column 2: 'quantity'\n",
-      "Column 3: 'item_name'\n",
-      "Column 4: 'choice_description'\n",
-      "Column 5: 'item_price'\n"
+      "Columns 1: order_id\n",
+      "Columns 2: quantity\n",
+      "Columns 3: item_name\n",
+      "Columns 4: choice_description\n",
+      "Columns 5: item_price\n"
      ]
     }
    ],
    "source": [
-    "for col_idx, col_name in enumerate(chipo.columns):\n",
-    "    print(f\"Column {col_idx + 1}: '{col_name}'\")"
+    "for i, col in enumerate(chipo.columns):\n",
+    "    print(f\"Columns {i + 1}: {col}\")"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -236,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -246,6 +300,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -254,12 +309,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------+\n",
+      "|   item_name|\n",
+      "+------------+\n",
+      "|Chicken Bowl|\n",
+      "+------------+\n",
+      "only showing top 1 row\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql.types import IntegerType\n",
+    "chipo = chipo\\\n",
+    "    .withColumn(\"quantity\", chipo[\"quantity\"].cast(IntegerType()))\n",
+    "\n",
+    "chipo\\\n",
+    "    .groupby(\"item_name\")\\\n",
+    "    .sum(\"quantity\")\\\n",
+    "    .withColumnRenamed(\"sum(quantity)\", \"quantity\")\\\n",
+    "    .orderBy(\"quantity\", ascending = False)\\\n",
+    "    .select(\"item_name\")\\\n",
+    "    .show(1)"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -268,14 +350,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+\n",
+      "|quantity|\n",
+      "+--------+\n",
+      "|     761|\n",
+      "+--------+\n",
+      "only showing top 1 row\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "chipo\\\n",
+    "    .groupby(\"item_name\")\\\n",
+    "    .sum(\"quantity\")\\\n",
+    "    .withColumnRenamed(\"sum(quantity)\", \"quantity\")\\\n",
+    "    .orderBy(\"quantity\", ascending = False)\\\n",
+    "    .select(\"quantity\")\\\n",
+    "    .show(1)"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -284,30 +389,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------+--------+\n",
+      "|choice_description|quantity|\n",
+      "+------------------+--------+\n",
+      "|       [Diet Coke]|     159|\n",
+      "+------------------+--------+\n",
+      "only showing top 1 row\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "chipo\\\n",
+    "    .groupby(\"choice_description\")\\\n",
+    "    .sum(\"quantity\")\\\n",
+    "    .withColumnRenamed(\"sum(quantity)\", \"quantity\")\\\n",
+    "    .orderBy(\"quantity\", ascending = False)\\\n",
+    "    .filter(chipo.choice_description != \"NULL\")\\\n",
+    "    .show(1)\n",
+    "    # .select(\"choice_description\")\\"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 12. How many items were orderd in total?"
+    "### Step 12. How many items were ordered in total?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------+\n",
+      "|sum(quantity)|\n",
+      "+-------------+\n",
+      "|         4972|\n",
+      "+-------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "chipo\\\n",
+    "    .groupby()\\\n",
+    "    .sum(\"quantity\")\\\n",
+    "    .show()"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -315,6 +463,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -323,14 +472,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['string']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[col[1] for col in chipo.dtypes if col[0] == \"item_price\"]"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+--------+--------------------+--------------------+----------+\n",
+      "|order_id|quantity|           item_name|  choice_description|item_price|\n",
+      "+--------+--------+--------------------+--------------------+----------+\n",
+      "|       1|       1|Chips and Fresh T...|                NULL|    $2.39 |\n",
+      "|       1|       1|                Izze|        [Clementine]|    $3.39 |\n",
+      "|       1|       1|    Nantucket Nectar|             [Apple]|    $3.39 |\n",
+      "|       1|       1|Chips and Tomatil...|                NULL|    $2.39 |\n",
+      "|       2|       2|        Chicken Bowl|[Tomatillo-Red Ch...|   $16.98 |\n",
+      "|       3|       1|        Chicken Bowl|[Fresh Tomato Sal...|   $10.98 |\n",
+      "|       3|       1|       Side of Chips|                NULL|    $1.69 |\n",
+      "|       4|       1|       Steak Burrito|[Tomatillo Red Ch...|   $11.75 |\n",
+      "|       4|       1|    Steak Soft Tacos|[Tomatillo Green ...|    $9.25 |\n",
+      "|       5|       1|       Steak Burrito|[Fresh Tomato Sal...|    $9.25 |\n",
+      "+--------+--------+--------------------+--------------------+----------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "chipo.show(10)"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -339,14 +534,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from pyspark.sql.functions import col, udf\n",
+    "from pyspark.sql.types import FloatType\n",
+    "\n",
+    "chipo = chipo\\\n",
+    "    .withColumn(\"item_price\", udf(lambda s: s[1:])(col(\"item_price\")).cast(FloatType()))"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -355,14 +557,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('order_id', 'string'),\n",
+       " ('quantity', 'int'),\n",
+       " ('item_name', 'string'),\n",
+       " ('choice_description', 'string'),\n",
+       " ('item_price', 'float')]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chipo.dtypes"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -371,14 +591,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------+\n",
+      "|    sum(product)|\n",
+      "+----------------+\n",
+      "|39237.0197327137|\n",
+      "+----------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "chipo\\\n",
+    ".withColumn(\"product\", col(\"quantity\") * col(\"item_price\"))\\\n",
+    ".groupby()\\\n",
+    ".sum(\"product\")\\\n",
+    ".show()"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -387,14 +627,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1834"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chipo.select(\"order_id\").distinct().count()"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -403,29 +657,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------+\n",
+      "|      avg(product)|\n",
+      "+------------------+\n",
+      "|21.394231042919138|\n",
+      "+------------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solution 1\n",
-    "\n"
+    "chipo\\\n",
+    ".withColumn(\"product\", col(\"quantity\") * col(\"item_price\"))\\\n",
+    ".groupby(\"order_id\")\\\n",
+    ".sum(\"product\")\\\n",
+    ".withColumnRenamed(\"sum(product)\", \"product\")\\\n",
+    ".groupby()\\\n",
+    ".avg(\"product\")\\\n",
+    ".show()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Solution 2\n",
-    "\n"
-   ]
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -434,12 +696,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chipo.select(\"item_name\").distinct().count()"
+   ]
   }
  ],
  "metadata": {
